--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti1:3.1": "“Divorate dall’avidità, ",
   "iti1:3.2": "le creature giungono a uno stato di miseria. ",
   "iti1:3.3": "Ma chi comprende nel profondo questa avidità, ",
-  "iti1:3.4": "vedendo chiaramente, la abbandona ",
+  "iti1:3.4": "vedendo chiaramente, la abbandona, ",
   "iti1:3.5": "e non ritornano ",
   "iti1:3.6": "più in questo mondo.” ",
   "iti1:4.1": "Anche questo disse il Buddha. Così ho udito. "
