Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti3_translation-it-soma.json
@@ -4,6 +4,6 @@
   "iti3:2.2": "e il non-ritorno è assicurato. ",
   "iti3:2.3": "E qual è questa cosa? ",
   "iti3:2.4": "L’illusione. ",
-  "iti3:3.1": "“Resi folli / impazziti dall’illusione, ",
+  "iti3:3.1": "“Confuse dall’illusione, ",
   "iti3:3.3": "Chi comprende del tutto l’illusione, "
 }
