Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "sn22.89:1.1": "A un certo punto molti cercatori anziani soggiornavano/erano a Kosambī, nel Parco di Ghosita. "
+  "sn22.89:1.1": "A un certo punto molti cercatori anziani soggiornavano/erano a Kosambī, nel Parco di Ghosita. ",
+  "sn22.89:1.2": "In quell’occasione il Venerabile Khemako soggiornava/era nel Parco di Giuggiole "
 }
