--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -1,4 +1,5 @@
 {
   "sn22.89:1.1": "A un certo punto molti cercatori anziani soggiornavano/erano a Kosambī, nel Parco di Ghosita. ",
-  "sn22.89:1.2": "In quell’occasione il Venerabile Khemako era infermo, afflitto, e molto ammalato nel Parco di Giuggiole. "
+  "sn22.89:1.2": "In quell’occasione il Venerabile Khemako era infermo, afflitto, e molto ammalato nel Parco di Giuggiole. ",
+  "sn22.89:1.3": "Molti cercatori anziani nel tardo pomeriggio, emersi/usciti dalla solitudine/isolamento, dissero al Venerabile Dāsaka: "
 }
