--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -280,5 +280,6 @@
   "mn82:39.5": "„Was denkst du, großer König? ",
   "mn82:39.6": "Hast du irgendeine chronische Krankheit?“ ",
   "mn82:39.7": "„Ja, das habe ich. ",
-  "mn82:39.8": "Manchmal scharen sich meine Freunde und Kollegen, Verwandten und Sippenangehörigen um mich und denken: "
+  "mn82:39.8": "Manchmal scharen sich meine Freunde und Kollegen, Verwandten und Sippenangehörigen um mich und denken: ",
+  "mn82:39.9": "‚Jetzt wird der König sterben! Jetzt wird der König sterben!‘ "
 }
