--- a/translation/de/sabbamitta/sutta/sn/sn41/sn41.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn41/sn41.10_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn41.10:1.3": "„Hausbesitzer, wünsche dir, in Zukunft ein Rad-drehender Herrscher zu werden!“ ",
   "sn41.10:2.1": "Darauf entgegnete Citta ihnen: ",
   "sn41.10:2.2": "„Auch das ist unbeständig! Auch das wird vergehen! Auch das wird zurückgelassen werden!“ ",
-  "sn41.10:2.3": "Darauf sagten seine Freunde, Kollegen, Verwandten und Angehörigen: ",
+  "sn41.10:2.3": "Darauf sagten seine Freunde, Kollegen, Verwandten und Sippenangehörigen: ",
   "sn41.10:2.4": "„Sei achtsam, Hausherr! Plappere nicht!“ ",
   "sn41.10:2.5": "„Was habe ich gesagt, dass ihr das zu mir sagt?“ ",
   "sn41.10:2.7": "„Es ist, weil du gesagt hast: ",
