Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -283,6 +283,6 @@
   "mn82:39.8": "Manchmal scharen sich meine Freunde und Kollegen, Verwandten und Sippenangehörigen um mich und denken: ",
   "mn82:39.9": "‚Jetzt wird der König sterben! Jetzt wird der König sterben!‘“ ",
   "mn82:39.10": "„Was denkst du, großer König? ",
-  "mn82:39.11": "Kannst du erreichen, dass Freunde und Kollegen, Sippenangehörigen dir helfen: ",
+  "mn82:39.11": "Kannst du erreichen, dass deine Freunde und Kollegen, Verwandten und Sippenangehörigen dir helfen: ",
   "mn82:39.12": "‚Bitte liebe Freunde und Kollegen, Verwandte und Sippenangehörige, teilt ihr alle hier meine Schmerzen unter euch auf, sodass ich weniger Schmerzen fühle.‘ "
 }
