--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -284,5 +284,6 @@
   "mn82:39.9": "‚Jetzt wird der König sterben! Jetzt wird der König sterben!‘“ ",
   "mn82:39.10": "„Was denkst du, großer König? ",
   "mn82:39.11": "Kannst du erreichen, dass deine Freunde und Kollegen, Verwandten und Sippenangehörigen dir helfen: ",
-  "mn82:39.12": "‚Bitte liebe Freunde und Kollegen, Verwandte und Sippenangehörige, teilt ihr alle hier meine Schmerzen unter euch auf, sodass ich weniger Schmerzen fühle‘, "
+  "mn82:39.12": "‚Bitte liebe Freunde und Kollegen, Verwandte und Sippenangehörige, teilt ihr alle hier meine Schmerzen unter euch auf, sodass ich weniger Schmerzen fühle‘, ",
+  "mn82:39.13": "oder musst du diesen Schmerz allein fühlen?“ "
 }
