Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -286,5 +286,6 @@
   "mn82:39.11": "Kannst du erreichen, dass deine Freunde und Kollegen, Verwandten und Sippenangehörigen dir helfen: ",
   "mn82:39.12": "‚Bitte liebe Freunde und Kollegen, Verwandte und Sippenangehörige, teilt ihr alle hier meine Schmerzen unter euch auf, sodass ich weniger Schmerzen fühle‘, ",
   "mn82:39.13": "oder musst du allein diesen Schmerz fühlen?“ ",
-  "mn82:39.14": "„Ich kann nicht erreichen, dass meine Freunde und Kollegen, Verwandten und Sippenangehörigen meinen Schmerz teilen. "
+  "mn82:39.14": "„Ich kann nicht erreichen, dass meine Freunde und Kollegen, Verwandten und Sippenangehörigen meinen Schmerz teilen. ",
+  "mn82:39.16": "Vielmehr muss ich allein diesen Schmerz allein fühlen.“ "
 }
