--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -288,5 +288,6 @@
   "mn82:39.13": "oder musst du allein diesen Schmerz fühlen?“ ",
   "mn82:39.14": "„Ich kann nicht erreichen, dass meine Freunde und Kollegen, Verwandten und Sippenangehörigen meinen Schmerz teilen. ",
   "mn82:39.16": "Vielmehr muss ich allein diesen Schmerz allein fühlen.“ ",
-  "mn82:39.17": "„Das ist es, was der Buddha meinte, als er sagte: "
+  "mn82:39.17": "„Das ist es, was der Buddha meinte, als er sagte: ",
+  "mn82:39.18": "‚Die Welt hat keinen Schutz und keinen Retter.‘“ "
 }
