--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -290,5 +290,6 @@
   "mn82:39.16": "Vielmehr muss ich allein diesen Schmerz allein fühlen.“ ",
   "mn82:39.17": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:39.18": "‚Die Welt hat keinen Schutz und keinen Retter.‘“ ",
-  "mn82:39.20": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, "
+  "mn82:39.20": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
+  "mn82:39.21": "wie treffend das vom Buddha gesagt wurde! "
 }
