--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -291,5 +291,6 @@
   "mn82:39.17": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:39.18": "‚Die Welt hat keinen Schutz und keinen Retter.‘“ ",
   "mn82:39.20": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
-  "mn82:39.21": "wie treffend das vom Buddha gesagt wurde! "
+  "mn82:39.21": "wie treffend das vom Buddha gesagt wurde! ",
+  "mn82:39.23": "Denn die Welt hat tatsächlich keinen Schutz und keinen Retter. "
 }
