--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -293,5 +293,6 @@
   "mn82:39.20": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
   "mn82:39.21": "wie treffend das vom Buddha gesagt wurde! ",
   "mn82:39.23": "Denn die Welt hat tatsächlich keinen Schutz und keinen Retter. ",
-  "mn82:40.1": "An diesem königlichen Hof gibt es Goldmünzen und ungemünztes Gold in Fülle, das in Kellern und Türmen verwahrt ist. Dennoch sagtest du: "
+  "mn82:40.1": "An diesem königlichen Hof gibt es Goldmünzen und ungemünztes Gold in Fülle, das in Kellern und Türmen verwahrt ist. Dennoch sagtest du: ",
+  "mn82:40.2": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ "
 }
