--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -295,5 +295,6 @@
   "mn82:39.23": "Denn die Welt hat tatsächlich keinen Schutz und keinen Retter. ",
   "mn82:40.1": "An diesem königlichen Hof gibt es Goldmünzen und ungemünztes Gold in Fülle, das in Kellern und Türmen verwahrt ist. Dennoch sagtest du: ",
   "mn82:40.2": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
-  "mn82:40.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ "
+  "mn82:40.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
+  "mn82:40.5": "„Was denkst du, großer König? "
 }
