--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -296,5 +296,6 @@
   "mn82:40.1": "An diesem königlichen Hof gibt es Goldmünzen und ungemünztes Gold in Fülle, das in Kellern und Türmen verwahrt ist. Dennoch sagtest du: ",
   "mn82:40.2": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
   "mn82:40.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
-  "mn82:40.5": "„Was denkst du, großer König? "
+  "mn82:40.5": "„Was denkst du, großer König? ",
+  "mn82:40.6": "Heutzutage vergnügst du dich mit den fünf Arten sinnlicher Erregung, mit denen du versorgt und ausgestattet bist. Aber gibt es eine Möglichkeit, sicherzustellen, "
 }
