Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -297,5 +297,6 @@
   "mn82:40.2": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘ ",
   "mn82:40.4": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
   "mn82:40.5": "„Was denkst du, großer König? ",
-  "mn82:40.6": "Heutzutage vergnügst du dich mit den fünf Arten sinnlicher Erregung, mit denen du versorgt und ausgestattet bist. Aber gibt es eine Möglichkeit, sicherzustellen, "
+  "mn82:40.6": "Heutzutage vergnügst du dich mit den fünf Arten sinnlicher Erregung, mit denen du versorgt und ausgestattet bist. Aber gibt es eine Möglichkeit, sicherzustellen, ",
+  "mn82:40.7": "dass du im nächsten Leben mit den gleichen fünf Arten sinnlicher Erregung versorgt und ausgestattet sein und dich damit ebenfalls vergnügen wirst? Oder werden andere diesen Besitz benutzen, während du gemäß deiner Taten weiterziehst?“ "
 }
