Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -299,5 +299,6 @@
   "mn82:40.5": "„Was denkst du, großer König? ",
   "mn82:40.6": "Heutzutage vergnügst du dich mit den fünf Arten sinnlicher Erregung, mit denen du versorgt und ausgestattet bist. Aber gibt es eine Möglichkeit, sicherzustellen, ",
   "mn82:40.7": "dass du im nächsten Leben weiterhin mit den gleichen fünf Arten sinnlicher Erregung versorgt und ausgestattet sein und dich damit ebenfalls vergnügen wirst? Oder werden andere diesen Besitz benutzen, während du gemäß deiner Taten weiterziehst?“ ",
-  "mn82:40.8": "„Es gibt keine Möglichkeit, sicherzustellen, dass ich mich im nächsten Leben weiterhin auf die gleiche Art vergnüge. "
+  "mn82:40.8": "„Es gibt keine Möglichkeit, sicherzustellen, dass ich mich im nächsten Leben weiterhin auf die gleiche Art vergnüge. ",
+  "mn82:40.10": "Vielmehr werden andere diesen Besitz benutzen, während ich gemäß deiner Taten weiterziehe.“ "
 }
