--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -302,5 +302,6 @@
   "mn82:40.8": "„Es gibt keine Möglichkeit, sicherzustellen, dass ich mich im nächsten Leben weiterhin auf die gleiche Art vergnüge. ",
   "mn82:40.10": "Vielmehr werden andere diesen Besitz benutzen, während ich gemäß deiner Taten weiterziehe.“ ",
   "mn82:40.11": "„Das ist es, was der Buddha meinte, als er sagte: ",
-  "mn82:40.12": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘“ "
+  "mn82:40.12": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘“ ",
+  "mn82:40.14": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, "
 }
