Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -304,5 +304,6 @@
   "mn82:40.11": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:40.12": "‚Die Welt hat keinen Besitzer – man muss alles zurücklassen und weiterziehen.‘“ ",
   "mn82:40.14": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
-  "mn82:40.15": "wie treffend das vom Buddha gesagt wurde! "
+  "mn82:40.15": "wie treffend das vom Buddha gesagt wurde! ",
+  "mn82:40.17": "Denn die Welt hat tatsächlich keinen Besitzer – man muss alles zurücklassen und weiterziehen. "
 }
