--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -307,5 +307,6 @@
   "mn82:40.15": "wie treffend das vom Buddha gesagt wurde! ",
   "mn82:40.17": "Denn die Welt hat tatsächlich keinen Besitzer – man muss alles zurücklassen und weiterziehen. ",
   "mn82:41.1": "Du sagtest auch: ‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
-  "mn82:41.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ "
+  "mn82:41.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
+  "mn82:41.4": "„Was denkst du, großer König? "
 }
