Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "dn5:1.1": "So habe ich es gehört: ",
   "dn5:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von fünfhundert Mönchen und Nonnen durch das Land der Magadher. Er kam zu einem Dorf der Magadher Brahmanen mit Namen Khāṇumata. ",
   "dn5:1.3": "Dort hielt er sich in der Nähe in Ambalaṭṭhikā auf. ",
-  "dn5:1.4": "Damals lebte der Brahmane Kūṭadanta in Khāṇumata. Es war ein Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelte und reichlich Heu, Wald, Wasser und Getreide besaß, ein königlicher Park, der einem Brahmanen geschenkt war. ",
+  "dn5:1.4": "Damals residierte der Brahmane Kūṭadanta in Khāṇumata. Es war ein Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelte und reichlich Heu, Wald, Wasser und Getreide besaß, ein königlicher Park, der einem Brahmanen geschenkt war. ",
   "dn5:1.5": "Nun hatte zu dieser Zeit der Brahmane Kūṭadanta ein großes Opfer vorbereitet. ",
   "dn5:1.6": "Je siebenhundert Stiere, Ochsen, Färsen, Ziegen und Widder waren zum Opfer an den Pfahl geführt worden. ",
   "dn5:2.1": "Die Brahmanen und Hausbesitzer von Khāṇumata hörten: ",
