--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -125,7 +125,7 @@
   "dn5:9.9": "Der Buddha sagte: ",
   "dn5:10.1": "„Es war einmal ein König, Brahmane, mit Namen Mahāvijita. Er war reich, wohlhabend und vermögend, mit einer Fülle von Gold und Silber, einer Fülle von Vermögen und Gütern, einer Fülle von Geld und Getreide, mit voller Schatzkammer und gefüllten Speichern. ",
   "dn5:10.2": "Da kam dem König Mahāvijita, als er für sich allein in Klausur war, dieser Gedanke in den Sinn: ",
-  "dn5:10.3": "‚Ich habe menschlichen Reichtum erlangt und Herrschaft über dieses große Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.‘ ",
+  "dn5:10.3": "‚Ich habe menschlichen Reichtum erlangt und residiere in diesem großen Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.‘ ",
   "dn5:10.4": "Da befahl er den brahmanischen Hohepriester zu sich und sagte zu ihm: ",
   "dn5:10.5": "‚Gerade kam mir, Brahmane, während ich für mich allein in Klausur war, dieser Gedanke in den Sinn: ",
   "dn5:10.6": "„Ich habe menschlichen Reichtum erlangt und Herrschaft über dieses große Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.“ ",
