--- a/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn5_translation-de-sabbamitta.json
@@ -128,7 +128,7 @@
   "dn5:10.3": "‚Ich habe menschlichen Reichtum erlangt und residiere in diesem großen Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.‘ ",
   "dn5:10.4": "Da befahl er den brahmanischen Hohepriester zu sich und sagte zu ihm: ",
   "dn5:10.5": "‚Gerade kam mir, Brahmane, während ich für mich allein in Klausur war, dieser Gedanke in den Sinn: ",
-  "dn5:10.6": "„Ich habe menschlichen Reichtum erlangt und Herrschaft über dieses große Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.“ ",
+  "dn5:10.6": "„Ich habe menschlichen Reichtum erlangt und residiere in diesem großen Gebiet, nachdem ich es erobert habe. Warum begehe ich nicht ein großes Opfer? Das wird zu meinem langanhaltenden Nutzen und Glück sein.“ ",
   "dn5:10.7": "Brahmane, ich will ein großes Opfer begehen. ",
   "dn5:10.8": "Bitte leite mich an. Das wird zu meinem langanhaltenden Nutzen und Glück sein.‘ ",
   "dn5:11.1": "Daraufhin sagte der brahmanische Hohepriester zu ihm: ",
