Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "sn3.25:4.1": "„Ich sage dir, großer König, ich kündige dir an: Alter und Tod kommen auf dich zu. ",
   "sn3.25:4.2": "Da Alter und Tod auf dich zukommen, was willst du tun?“ ",
   "sn3.25:4.3": "„Herr, was kann ich anderes tun, als die Lehren zu üben, Sittlichkeit zu üben, taugliche und gute Dinge zu tun? ",
-  "sn3.25:4.4": "Herr, es gibt gesalbte adelige Könige, die von Herrschaft berauscht und von Gier nach Sinnenfreuden besessen sind. Sie haben für das Land Sicherheit gewonnen und halten ein großes erobertes Gebiet besetzt. Solche Könige führen eine Schlacht mit Elefanten, ",
+  "sn3.25:4.4": "Herr, es gibt gesalbte adelige Könige, die von Herrschaft berauscht und von Gier nach Sinnenfreuden besessen sind. Sie haben für das Land Sicherheit gewonnen und residieren in einem großen eroberten Gebiet. Solche Könige führen eine Schlacht mit Elefanten, ",
   "sn3.25:4.7": "mit Reitertruppen, ",
   "sn3.25:4.8": "mit Streitwagen ",
   "sn3.25:4.9": "oder mit Fußsoldaten. ",
