--- a/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "dn4:1.1": "So habe ich es gehört: ",
   "dn4:1.2": "Einmal wanderte der Buddha im Land der Aṅger mit einem großen Saṅgha von fünfhundert Mönchen und Nonnen. Da kam er nach Campā, ",
   "dn4:1.3": "wo er sich am Ufer des Gaggarā-Lotusteichs aufhielt. ",
-  "dn4:1.4": "Damals lebte der Brahmane Soṇadaṇḍa in Campā. Es war ein Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelte und reichlich Heu, Wald, Wasser und Getreide besaß, ein königlicher Park, der einem Brahmanen geschenkt war. ",
+  "dn4:1.4": "Damals residierte der Brahmane Soṇadaṇḍa in Campā. Es war ein Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelte und reichlich Heu, Wald, Wasser und Getreide besaß, ein königlicher Park, der einem Brahmanen geschenkt war. ",
   "dn4:2.1": "Die Brahmanen und Hausbesitzer von Campā hörten: ",
   "dn4:2.2": "„Es scheint, der Asket Gotama – ein Sakyer, der von einer Familie der Sakyer fortgezogen ist – ist in Campā angekommen und hält sich am Ufer des Gaggarā-Lotusteichs auf. ",
   "dn4:2.3": "Er hat diesen guten Ruf: ",
