--- a/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
@@ -51,7 +51,7 @@
   "dn4:5.16": "Der Asket Gotama ist jung und ist erst kürzlich fortgezogen. … ",
   "dn4:5.17": "Du bist geehrt, geachtet, gewürdigt, verehrt und wertgeschätzt vom König Bimbisāra von Magadha … ",
   "dn4:5.18": "und dem Brahmanen Pokkharasādi. … ",
-  "dn4:5.19": "Du lebst in Campā, einem Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelt und reichlich Heu, Wald, Wasser und Getreide besitzt, ein königlicher Park, der einem Brahmanen geschenkt ist. ",
+  "dn4:5.19": "Du residierst in Campā, einem Krongut, von König Seniya Bimbisāra von Magadha verliehen, das von Lebewesen wimmelt und reichlich Heu, Wald, Wasser und Getreide besitzt, ein königlicher Park, der einem Brahmanen geschenkt ist. ",
   "dn4:5.21": "Auch aus diesem Grund ist es nicht angebracht, dass du zum Asketen Gotama gehst, um ihn zu sehen; ",
   "dn4:5.22": "es ist angebracht, dass er zu dir kommt, um dich zu sehen.“ ",
   "dn4:6.0": "3. Die Eigenschaften des Buddha ",
