Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -308,5 +308,6 @@
   "mn82:40.17": "Denn die Welt hat tatsächlich keinen Besitzer – man muss alles zurücklassen und weiterziehen. ",
   "mn82:41.1": "Du sagtest auch: ‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
   "mn82:41.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
-  "mn82:41.4": "„Was denkst du, großer König? "
+  "mn82:41.4": "„Was denkst du, großer König? ",
+  "mn82:41.5": "Du lebst in diesem reichen Land Kuru, ist es nicht so?“ "
 }
