--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -309,5 +309,6 @@
   "mn82:41.1": "Du sagtest auch: ‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
   "mn82:41.3": "Wie ist da die Bedeutung dieser Aussage zu sehen?“ ",
   "mn82:41.4": "„Was denkst du, großer König? ",
-  "mn82:41.5": "Du lebst in diesem reichen Land Kuru, ist es nicht so?“ "
+  "mn82:41.5": "Du lebst in diesem reichen Land Kuru, ist es nicht so?“ ",
+  "mn82:41.6": "„So ist es.“ "
 }
