Translations by sujato to translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
@@ -137,7 +137,7 @@
   "dn5:10.7": "Brahmin, I wish to perform a great sacrifice. ",
   "dn5:10.8": "Please instruct me. It will be for my lasting welfare and happiness.’ ",
   "dn5:11.1": "When he had spoken, the brahmin high priest said to him: ",
-  "dn5:11.2": "‘Sir, the king’s realm is harried and oppressed. Bandits have been seen raiding villages, towns, and cities, and infesting the highways. ",
+  "dn5:11.2": "‘Sir, the king’s realm is harried and oppressed. Raiding of villages, towns, and cities has been seen, and infesting of highways. ",
   "dn5:11.3": "But if the king were to extract more taxes while his realm is thus harried and oppressed, he would not be doing his duty. ",
   "dn5:11.4": "Now the king might think, ",
   "dn5:11.5": "“I’ll eradicate this outlaw threat by execution or imprisonment or confiscation or condemnation or banishment!” But that’s not the right way to eradicate this outlaw threat. ",
