--- a/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
@@ -28,7 +28,7 @@
   "an3.62:5.3": "that sweeps away villages, towns, and cities. ",
   "an3.62:5.4": "When this happens, sometimes a mother can find her child, and a child can find their mother. ",
   "an3.62:5.5": "This is the second peril that doesn’t tear mothers and children apart. ",
-  "an3.62:6.1": "Furthermore, there comes a time of peril from wild savages, and the countryfolk mount their vehicles and flee everywhere. ",
+  "an3.62:6.1": "Furthermore, there comes a time of peril due to turmoil in the wilds, and the countryfolk mount their vehicles and flee everywhere. ",
   "an3.62:6.2": "When this happens, sometimes a mother can find her child, and a child can find their mother. ",
   "an3.62:6.3": "This is the third peril that doesn’t tear mothers and children apart. ",
   "an3.62:6.4": "These are the three perils an unlearned ordinary person speaks of that don’t tear mothers and children apart. ",
