--- a/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an3/an3.62_translation-en-sujato.json
@@ -13,7 +13,7 @@
   "an3.62:2.3": "that sweeps away villages, towns, and cities. ",
   "an3.62:2.4": "When this happens, a mother can’t find her child, and a child can’t find their mother. ",
   "an3.62:2.5": "This is the second peril that tears mothers and children apart. ",
-  "an3.62:3.1": "Furthermore, there comes a time of peril due to turmoil in the wilds, and the countryfolk mount their vehicles and flee everywhere. ",
+  "an3.62:3.1": "Furthermore, there comes a time of peril due to turmoil in the wilds, so the countryfolk mount their vehicles and flee everywhere. ",
   "an3.62:3.2": "When this happens, a mother can’t find her child, and a child can’t find their mother. ",
   "an3.62:3.3": "This is the third peril that tears mothers and children apart. ",
   "an3.62:3.4": "These are the three perils an unlearned ordinary person speaks of that tear mothers and children apart. ",
