--- a/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
@@ -142,7 +142,7 @@
   "dn5:11.4": "Now the king might think, ",
   "dn5:11.5": "“I’ll eradicate this plague of savages by execution or imprisonment or confiscation or condemnation or banishment!” But that’s not the right way to eradicate this outlaw threat. ",
   "dn5:11.6": "Those who remain after the killing will return to harass the king’s realm. ",
-  "dn5:11.7": "Rather, here is a plan, relying on which the outlaw threat will be properly uprooted. ",
+  "dn5:11.7": "Rather, here is a plan, relying on which the plague of savages will be properly uprooted. ",
   "dn5:11.8": "So let the king provide seed and fodder for those in the realm who work in growing crops and raising cattle. ",
   "dn5:11.9": "Let the king provide funding for those who work in trade. ",
   "dn5:11.10": "Let the king guarantee food and wages for those in government service. ",
