Translations by sujato to translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn5_translation-en-sujato.json
@@ -140,7 +140,7 @@
   "dn5:11.2": "‘Sir, the king’s realm is harried and oppressed. Raiding of villages, towns, and cities has been seen, and infesting of highways. ",
   "dn5:11.3": "But if the king were to extract more taxes while his realm is thus harried and oppressed, he would not be doing his duty. ",
   "dn5:11.4": "Now the king might think, ",
-  "dn5:11.5": "“I’ll eradicate this plague of savages by execution or imprisonment or confiscation or condemnation or banishment!” But that’s not the right way to eradicate this plague of savages. ",
+  "dn5:11.5": "This person causes another to suffer under a false pretext—by execution or imprisonment or confiscation or condemnation or banishment—thinking ‘I’m powerful, I want power’. ",
   "dn5:11.6": "Those who remain after the killing will return to harass the king’s realm. ",
   "dn5:11.7": "Rather, here is a plan, relying on which the plague of savages will be properly uprooted. ",
   "dn5:11.8": "So let the king provide seed and fodder for those in the realm who work in growing crops and raising cattle. ",
