Translations by sujato to translation/en/sujato/sutta/dn/dn27_translation-en-sujato.json

--- a/translation/en/sujato/sutta/dn/dn27_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn27_translation-en-sujato.json
@@ -272,7 +272,7 @@
   "dn27:24.3": "And that, Vāseṭṭha, is how the ancient primordial term for the circle of peasants was created; for those very beings, not others; for those like them, not unlike; by virtue of principle, not against principle. ",
   "dn27:24.4": "For principle, Vāseṭṭha, is the best thing for people in both this life and the next. ",
   "dn27:25.0": "13. The Circle of Menials ",
-  "dn27:25.1": "The remaining beings lived by hunting and minor tasks. ",
+  "dn27:25.1": "The remaining beings lived by venal hunting and minor tasks. ",
   "dn27:25.2": "‘They live by venal hunting and minor tasks’ is the meaning of ‘menial’, the term applied to them. ",
   "dn27:25.3": "And that, Vāseṭṭha, is how the ancient primordial term for the circle of menials was created; for those very beings, not others; for those like them, not unlike; by virtue of principle, not against principle. ",
   "dn27:25.4": "For principle, Vāseṭṭha, is the best thing for people in both this life and the next. ",
