--- a/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thig/thig16.1_translation-en-sujato.json
@@ -249,7 +249,7 @@
   "thig16.1:62.1": "Deliberately control yourself <j>among sensual pleasures! ",
   "thig16.1:62.2": "You’re like a dog fixed to a chain: ",
   "thig16.1:62.3": "sensual pleasures will surely devour you ",
-  "thig16.1:62.4": "as hungry outcastes would a dog. ",
+  "thig16.1:62.4": "as hungry outcasts would a dog. ",
   "thig16.1:63.1": "Harnessed to sensual pleasure, ",
   "thig16.1:63.2": "you undergo endless pain, ",
   "thig16.1:63.3": "along with much mental anguish: ",
