--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -114,7 +114,7 @@
   "an5.192:14.11": "That’s how a brahmin is a brahmin outcaste. ",
   "an5.192:15.1": "Doṇa, the ancient brahmin seers were Aṭṭhaka, Vāmaka, Vāmadeva, Vessāmitta, Yamadaggi, Aṅgīrasa, Bhāradvāja, Vāseṭṭha, Kassapa, and Bhagu. They were the authors and propagators of the hymns, whose hymnal was sung and propagated and compiled in ancient times. These days, brahmins continue to sing and chant it. They continue chanting what was chanted, reciting what was recited, and teaching what was taught. ",
   "an5.192:15.2": "Those seers described five kinds of brahmins. ",
-  "an5.192:15.3": "A brahmin who is equal to Brahmā, one who is equal to a god, one who toes the line, one who crosses the line, and the fifth is a brahmin outcaste. ",
+  "an5.192:15.3": "A brahmin who is equal to Brahmā, one who is equal to a god, one who toes the line, one who crosses the line, and the fifth is a brahmin outcast. ",
   "an5.192:15.4": "Which one of these are you, Doṇa?” ",
   "an5.192:16.1": "“This being so, Master Gotama, I don’t even qualify as a brahmin outcast. ",
   "an5.192:16.2": "Excellent, Master Gotama! … From this day forth, may Master Gotama remember me as a lay follower who has gone for refuge for life.” "
