--- a/translation/en/sujato/sutta/an/an5/an5.175_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.175_translation-en-sujato.json
@@ -2,7 +2,7 @@
   "an5.175:0.1": "Numbered Discourses 5.175 ",
   "an5.175:0.2": "18. A Lay Follower ",
   "an5.175:0.3": "Outcast ",
-  "an5.175:1.1": "“Mendicants, a lay follower with five qualities is an outcast, a stain, and a reject among lay followers. ",
+  "an5.175:1.1": "“Mendicants, a lay follower with five qualities is a corpse-worker, a stain, and a reject among lay followers. ",
   "an5.175:1.2": "What five? ",
   "an5.175:1.3": "They’re faithless. ",
   "an5.175:1.4": "They’re unethical. ",
