Translations by sujato to translation/en/sujato/sutta/an/an5/an5.175_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an5/an5.175_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.175_translation-en-sujato.json
@@ -9,7 +9,7 @@
   "an5.175:1.5": "They follow boisterous superstitious rites, believing in omens rather than deeds. ",
   "an5.175:1.6": "They seek outside of the Buddhist community for those worthy of religious donations. ",
   "an5.175:1.7": "And they make offerings there first. ",
-  "an5.175:1.8": "A lay follower with these five qualities is an outcast, a stain, and a reject among lay followers. ",
+  "an5.175:1.8": "A lay follower with these five qualities is a corpse-worker, a stain, and a reject among lay followers. ",
   "an5.175:2.1": "A lay follower with five qualities is a gem, a pink lotus, and a white lotus among lay followers. ",
   "an5.175:2.2": "What five? ",
   "an5.175:2.3": "They’re faithful. ",
