--- a/translation/en/sujato/sutta/mn/mn96_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn96_translation-en-sujato.json
@@ -126,7 +126,7 @@
   "mn96:16.1": "What do you think, brahmin? ",
   "mn96:16.2": "Suppose an anointed aristocratic king were to gather a hundred people born in different classes and say to them: ",
   "mn96:16.3": "‘Please gentlemen, let anyone here who was born in a family of aristocrats, brahmins, or chieftains take a drill-stick made of teak, sal, frankincense wood, sandalwood, or cherry wood, light a fire and produce heat. ",
-  "mn96:16.4": "And let anyone here who was born in a family of outcasts, hunters, bamboo-workers, chariot-makers, or scavengers take a drill-stick made from a dog’s drinking trough, a pig’s trough, a dustbin, or castor-oil wood, light a fire and produce heat.’ ",
+  "mn96:16.4": "And let anyone here who was born in a family of corpse-workers, hunters, bamboo-workers, chariot-makers, or scavengers take a drill-stick made from a dog’s drinking trough, a pig’s trough, a dustbin, or castor-oil wood, light a fire and produce heat.’ ",
   "mn96:16.5": "What do you think, brahmin? ",
   "mn96:16.6": "Would only the fire produced by the high class people with good quality wood have flames, color, and radiance, and be usable as fire, ",
   "mn96:16.7": "and not the fire produced by the low class people with poor quality wood?” ",
