--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -17,7 +17,7 @@
   "an5.192:2.11": "For I am well born on both my mother’s and father’s side, of pure descent, with irrefutable and impeccable genealogy back to the seventh paternal generation. I recite and remember the hymns, and have mastered the three Vedas, together with their vocabularies, ritual, phonology and etymology, and the testament as fifth. I know philology and grammar, and am well versed in cosmology and the marks of a great man.” ",
   "an5.192:3.1": "“Doṇa, the ancient brahmin seers were Aṭṭhaka, Vāmaka, Vāmadeva, Vessāmitta, Yamadaggi, Aṅgīrasa, Bhāradvāja, Vāseṭṭha, Kassapa, and Bhagu. They were the authors and propagators of the hymns, whose hymnal was sung and propagated and compiled in ancient times. These days, brahmins continue to sing and chant it. They continue chanting what was chanted, reciting what was recited, and teaching what was taught. ",
   "an5.192:3.2": "Those seers described five kinds of brahmins. ",
-  "an5.192:3.3": "A brahmin who is equal to Brahmā, one who is equal to a god, one who toes the line, one who crosses the line, and the fifth is a brahmin outcast. ",
+  "an5.192:3.3": "A brahmin who is equal to Brahmā, one who is equal to a god, one who toes the line, one who crosses the line, and the fifth is a brahmin corpse-worker. ",
   "an5.192:3.4": "Which one of these are you, Doṇa?” ",
   "an5.192:4.1": "“Master Gotama, we don’t know about these five kinds of brahmins. We just know the word ‘brahmin’. ",
   "an5.192:4.2": "Master Gotama, please teach me this matter so I can learn about these five brahmins.” ",
