--- a/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.192_translation-en-sujato.json
@@ -111,7 +111,7 @@
   "an5.192:14.8": "‘It’s like a fire that burns both pure and filthy substances, but doesn’t become corrupted by them. ",
   "an5.192:14.9": "In the same way, my good man, if a brahmin earns a living by any kind of work, he is not corrupted by that.’ ",
   "an5.192:14.10": "A brahmin is called a brahmin outcast because he earns a living by any kind of work. ",
-  "an5.192:14.11": "That’s how a brahmin is a brahmin outcast. ",
+  "an5.192:14.11": "That’s how a brahmin is a brahmin corpse-worker. ",
   "an5.192:15.1": "Doṇa, the ancient brahmin seers were Aṭṭhaka, Vāmaka, Vāmadeva, Vessāmitta, Yamadaggi, Aṅgīrasa, Bhāradvāja, Vāseṭṭha, Kassapa, and Bhagu. They were the authors and propagators of the hymns, whose hymnal was sung and propagated and compiled in ancient times. These days, brahmins continue to sing and chant it. They continue chanting what was chanted, reciting what was recited, and teaching what was taught. ",
   "an5.192:15.2": "Those seers described five kinds of brahmins. ",
   "an5.192:15.3": "A brahmin who is equal to Brahmā, one who is equal to a god, one who toes the line, one who crosses the line, and the fifth is a brahmin corpse-worker. ",
