--- a/translation/en/sujato/sutta/sn/sn47/sn47.19_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn47/sn47.19_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "sn47.19:0.3": "At Sedaka ",
   "sn47.19:1.1": "At one time the Buddha was staying in the land of the Sumbhas, near the town of the Sumbhas called Sedaka. ",
   "sn47.19:1.2": "There the Buddha addressed the mendicants: ",
-  "sn47.19:1.3": "“Once upon a time, mendicants, a bamboo-acrobat of the corpse-workers set up his bamboo pole and said to his apprentice Medakathālikā, ",
+  "sn47.19:1.3": "“Once upon a time, mendicants, a bamboo-acrobat of the corpse-workers set up the bamboo pole of his tribe and said to his apprentice Medakathālikā, ",
   "sn47.19:1.4": "‘Come now, dear Medakathālikā, climb up the bamboo pole and stand on my shoulders.’ ",
   "sn47.19:1.5": "‘Yes, teacher,’ she replied. She climbed up the bamboo pole and stood on her teacher’s shoulders. ",
   "sn47.19:1.6": "Then the acrobat said to Medakathālikā, ",
