--- a/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
@@ -87,7 +87,7 @@
   "dn1:1.12.3": "The ascetic Gotama refrains from storing up such goods.’ ",
   "dn1:1.12.4": "Such is an ordinary person’s praise of the Realized One. ",
   "dn1:1.13.1": "‘There are some ascetics and brahmins who, while enjoying food given in faith, still engage in seeing shows. ",
-  "dn1:1.13.2": "This includes such things as dancing, singing, music, performances, and storytelling; clapping, gongs, and kettledrums; beauty pageants and tribal bone-washing ceremonies; battles of elephants, horses, buffaloes, bulls, goats, rams, chickens, and quails; staff-fights, boxing, and wrestling; combat, roll calls of the armed forces, battle-formations, and regimental reviews. ",
+  "dn1:1.13.2": "This includes such things as dancing, singing, music, performances, and storytelling; clapping, gongs, and kettledrums; beauty pageants and bone-washing ceremonies of the corpse-workers; battles of elephants, horses, buffaloes, bulls, goats, rams, chickens, and quails; staff-fights, boxing, and wrestling; combat, roll calls of the armed forces, battle-formations, and regimental reviews. ",
   "dn1:1.13.3": "The ascetic Gotama refrains from such shows.’ ",
   "dn1:1.13.4": "Such is an ordinary person’s praise of the Realized One. ",
   "dn1:1.14.1": "‘There are some ascetics and brahmins who, while enjoying food given in faith, still engage in gambling that causes negligence. ",
