--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -314,5 +314,6 @@
   "mn82:41.7": "„Was denkst du, großer König? ",
   "mn82:41.8": "Angenommen, ein vertrauenswürdiger und zuverlässiger Mann käme von Osten. ",
   "mn82:41.9": "Er begäbe sich zu dir und meldete: ",
-  "mn82:41.10": "‚Bitte, großer König, du sollst wissen: Ich komme von Osten. "
+  "mn82:41.10": "‚Bitte, großer König, du sollst wissen: Ich komme von Osten. ",
+  "mn82:41.11": "Dort sah ich ein großes Land, das erfolgreich und blühend war, dicht bevölkert und voller Menschen. "
 }
