Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -317,5 +317,6 @@
   "mn82:41.10": "‚Bitte, großer König, du sollst wissen: Ich komme von Osten. ",
   "mn82:41.11": "Dort sah ich ein großes Land, das erfolgreich und blühend war, dicht bevölkert und voller Menschen. ",
   "mn82:41.12": "Sie haben viele Bataillone von Elefanten, Reitertruppen, Streitwagen und Fußsoldaten. ",
-  "mn82:41.13": "Und es gibt reichlich Geld und Getreide, "
+  "mn82:41.13": "Und es gibt reichlich Geld und Getreide, ",
+  "mn82:41.14": "reichlich Goldmünzen und ungemünztes Gold, bearbeitet wie auch unbearbeitet, "
 }
