Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -320,5 +320,6 @@
   "mn82:41.13": "Und es gibt reichlich Geld und Getreide, ",
   "mn82:41.14": "reichlich Goldmünzen und ungemünztes Gold, bearbeitet wie auch unbearbeitet, ",
   "mn82:41.15": "und viele Frauen zum Nehmen. ",
-  "mn82:41.16": "Mit den Streitkräften, die du hast, kannst du es erobern. "
+  "mn82:41.16": "Mit den Streitkräften, die du hast, kannst du es erobern. ",
+  "mn82:41.17": "Erobere es, großer König!‘ Was würdest du tun?“ "
 }
