--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -321,5 +321,6 @@
   "mn82:41.14": "reichlich Goldmünzen und ungemünztes Gold, bearbeitet wie auch unbearbeitet, ",
   "mn82:41.15": "und viele Frauen zum Nehmen. ",
   "mn82:41.16": "Mit den Streitkräften, die du hast, kannst du es erobern. ",
-  "mn82:41.17": "Erobere es, großer König!‘ Was würdest du tun?“ "
+  "mn82:41.17": "Erobere es, großer König!‘ Was würdest du tun?“ ",
+  "mn82:41.18": "„Ich würde es erobern und dort residieren.“ "
 }
