--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -323,5 +323,6 @@
   "mn82:41.16": "Mit den Streitkräften, die du hast, kannst du es erobern. ",
   "mn82:41.17": "Erobere es, großer König!‘ Was würdest du tun?“ ",
   "mn82:41.18": "„Ich würde es erobern und dort residieren.“ ",
-  "mn82:41.19": "„Was denkst du, großer König? "
+  "mn82:41.19": "„Was denkst du, großer König? ",
+  "mn82:41.20": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … "
 }
