Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -324,5 +324,6 @@
   "mn82:41.17": "Erobere es, großer König!‘ Was würdest du tun?“ ",
   "mn82:41.18": "„Ich würde es erobern und dort residieren.“ ",
   "mn82:41.19": "„Was denkst du, großer König? ",
-  "mn82:41.20": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … "
+  "mn82:41.20": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … ",
+  "mn82:41.21": "aus Norden … "
 }
