Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -326,5 +326,6 @@
   "mn82:41.19": "„Was denkst du, großer König? ",
   "mn82:41.20": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … ",
   "mn82:41.21": "aus Norden … ",
-  "mn82:41.22": "aus Süden … "
+  "mn82:41.22": "aus Süden … ",
+  "mn82:41.23": "oder vom andern Ufer des Meeres. "
 }
