Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -327,5 +327,6 @@
   "mn82:41.20": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … ",
   "mn82:41.21": "aus Norden … ",
   "mn82:41.22": "aus Süden … ",
-  "mn82:41.23": "oder vom andern Ufer des Meeres. "
+  "mn82:41.23": "oder vom andern Ufer des Meeres. ",
+  "mn82:41.24": "Er begäbe sich zu dir und meldete: "
 }
