Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -328,5 +328,5 @@
   "mn82:41.21": "aus Norden … ",
   "mn82:41.22": "aus Süden … ",
   "mn82:41.23": "oder vom andern Ufer des Meeres. ",
-  "mn82:41.24": "Er begäbe sich zu dir und meldete: "
+  "mn82:41.24": "Er begäbe sich zu dir und meldete einen gleichen Sachverhalt. "
 }
