--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -330,5 +330,6 @@
   "mn82:41.23": "oder vom andern Ufer des Meeres. ",
   "mn82:41.24": "Er begäbe sich zu dir und meldete einen gleichen Sachverhalt. ",
   "mn82:41.32": "Was würdest du tun?“ ",
-  "mn82:41.33": "„Ich würde es erobern und dort residieren.“ "
+  "mn82:41.33": "„Ich würde es erobern und dort residieren.“ ",
+  "mn82:41.34": "„Das ist es, was der Buddha meinte, als er sagte: "
 }
