--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -331,5 +331,6 @@
   "mn82:41.24": "Er begäbe sich zu dir und meldete einen gleichen Sachverhalt. ",
   "mn82:41.32": "Was würdest du tun?“ ",
   "mn82:41.33": "„Ich würde es erobern und dort residieren.“ ",
-  "mn82:41.34": "„Das ist es, was der Buddha meinte, als er sagte: "
+  "mn82:41.34": "„Das ist es, was der Buddha meinte, als er sagte: ",
+  "mn82:41.35": "‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ "
 }
