--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -334,5 +334,6 @@
   "mn82:41.34": "„Das ist es, was der Buddha meinte, als er sagte: ",
   "mn82:41.35": "‚Die Welt ist voller Wollen, unersättlich, der Sklave des Verlangens.‘ ",
   "mn82:41.36": "Und nachdem ich das erkannt und gesehen und gehört hatte, zog ich aus dem Haus fort ins hauslose Leben.“ ",
-  "mn82:41.37": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, "
+  "mn82:41.37": "„Es ist unglaublich, Meister Raṭṭhapāla, es ist erstaunlich, ",
+  "mn82:41.38": "wie treffend das vom Buddha gesagt wurde! "
 }
