Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -338,5 +338,6 @@
   "mn82:41.38": "wie treffend das vom Buddha gesagt wurde! ",
   "mn82:41.40": "Denn die Welt ist tatsächlich voller Wollen, unersättlich, der Sklave des Verlangens.“ ",
   "mn82:42.1": "Das sagte der Ehrwürdige Raṭṭhapāla. ",
-  "mn82:42.2": "Und er fuhr fort: "
+  "mn82:42.2": "Und er fuhr fort: ",
+  "mn82:42.3": "„Ich sehe in der Welt reiche Leute, "
 }
