--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -340,5 +340,6 @@
   "mn82:42.1": "Das sagte der Ehrwürdige Raṭṭhapāla. ",
   "mn82:42.2": "Und er fuhr fort: ",
   "mn82:42.3": "„Ich sehe in der Welt reiche Leute, ",
-  "mn82:42.4": "die aufgrund von Täuschung nicht geben, was sie erworben haben. "
+  "mn82:42.4": "die aufgrund von Täuschung nicht geben, was sie erworben haben. ",
+  "mn82:42.5": "Geizig horten sie ihren Reichtum, "
 }
