--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -341,5 +341,6 @@
   "mn82:42.2": "Und er fuhr fort: ",
   "mn82:42.3": "„Ich sehe in der Welt reiche Leute, ",
   "mn82:42.4": "die aufgrund von Täuschung nicht geben, was sie erworben haben. ",
-  "mn82:42.5": "Geizig horten sie ihren Reichtum, "
+  "mn82:42.5": "Geizig horten sie ihren Reichtum, ",
+  "mn82:42.6": "verlangen nach immer mehr Sinnenfreuden. "
 }
