--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp116:0.1": "Kratka zbirka Budnih govora ",
   "dhp116:0.2": "Reči mudrosti ",
-  "dhp116:0.3": "Zlodelo "
+  "dhp116:0.3": "Zlodelo ",
+  "dhp116:1": "Prionite da činite dobro, "
 }
