Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp116:0.2": "Reči mudrosti ",
   "dhp116:0.3": "Zlodelo ",
   "dhp116:1": "Prionite da činite dobro, ",
-  "dhp116:2": "loše misli odagnajte, "
+  "dhp116:2": "loše misli odagnajte, ",
+  "dhp116:3": "u onoga ko dobra ne čini, "
 }
