Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp116:3": "u onoga ko dobra ne čini, ",
   "dhp116:4": "um se raduje zlodelu. ",
   "dhp117:1": "Ako čovek i učini nešto loše, ",
-  "dhp117:2": "neka to ne ponavlja, "
+  "dhp117:2": "neka to ne ponavlja, ",
+  "dhp117:3": "neka u tome ne uživa. "
 }
