Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -348,5 +348,6 @@
   "mn82:42.9": "unzufrieden mit dieser Küste, ",
   "mn82:42.10": "würde noch nach der anderen verlangen. ",
   "mn82:42.11": "Nicht nur der König, auch andere ",
-  "mn82:42.12": "erreichen den Tod, ohne das Verlangen los zu sein. "
+  "mn82:42.12": "erreichen den Tod, ohne das Verlangen los zu sein. ",
+  "mn82:42.13": "Sie verlassen den Körper und wollen noch immer, "
 }
