Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp116:4": "um se raduje zlodelu. ",
   "dhp117:1": "Ako čovek i učini nešto loše, ",
   "dhp117:2": "neka to ne ponavlja, ",
-  "dhp117:3": "neka u tome ne uživa. "
+  "dhp117:3": "neka u tome ne uživa. ",
+  "dhp117:4": "Bolno je gomilanje zlodela. "
 }
