Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -351,5 +351,6 @@
   "mn82:42.12": "erreichen den Tod, ohne das Verlangen los zu sein. ",
   "mn82:42.13": "Sie verlassen den Körper und wollen noch immer, ",
   "mn82:42.14": "denn in dieser Welt machen Sinnenfreuden nie satt. ",
-  "mn82:42.15": "Verwandte jammern mit zerzaustem Kopf: "
+  "mn82:42.15": "Verwandte jammern mit zerzaustem Kopf: ",
+  "mn82:42.16": "‚Oh! Ach! Er ist nicht unsterblich!‘ "
 }
