Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp117:2": "neka to ne ponavlja, ",
   "dhp117:3": "neka u tome ne uživa. ",
   "dhp117:4": "Bolno je gomilanje zlodela. ",
-  "dhp118:1": "Ako čovek učini dobro, "
+  "dhp118:1": "Ako čovek učini dobro, ",
+  "dhp118:2": "neka to ponavlja, "
 }
