Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp118:1": "Ako čovek učini dobro, ",
   "dhp118:2": "neka to ponavlja, ",
   "dhp118:3": "neka u tome uživa. ",
-  "dhp118:4": "Srećno je gomilanje dobročinstava. "
+  "dhp118:4": "Srećno je gomilanje dobročinstava. ",
+  "dhp119:1": "Možda ga vidi i kao dobro, "
 }
