Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -353,5 +353,6 @@
   "mn82:42.14": "denn in dieser Welt machen Sinnenfreuden nie satt. ",
   "mn82:42.15": "Verwandte jammern mit zerzaustem Kopf: ",
   "mn82:42.16": "‚Oh! Ach! Er ist nicht unsterblich!‘ ",
-  "mn82:42.17": "Sie tragen den Körper hinaus, in eine Hülle gewickelt, "
+  "mn82:42.17": "Sie tragen den Körper hinaus, in eine Hülle gewickelt, ",
+  "mn82:42.18": "errichten einen Scheiterhaufen und verbrennen ihn da. "
 }
