Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -356,5 +356,6 @@
   "mn82:42.17": "Sie tragen den Körper hinaus, in eine Hülle gewickelt, ",
   "mn82:42.18": "errichten einen Scheiterhaufen und verbrennen ihn da. ",
   "mn82:42.19": "Während er brennt, wird er von Pflöcken durchbohrt, ",
-  "mn82:42.20": "in nur ein einziges Tuch gewickelt, der Reichtum vergangen. "
+  "mn82:42.20": "in nur ein einziges Tuch gewickelt, der Reichtum vergangen. ",
+  "mn82:42.21": "Verwandte, Freunde und Gefährten "
 }
