Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -360,5 +360,6 @@
   "mn82:42.21": "Verwandte, Freunde und Gefährten ",
   "mn82:42.22": "können nicht helfen, wenn man stirbt. ",
   "mn82:42.23": "Erben nehmen den Reichtum, ",
-  "mn82:42.24": "und die Wesen wandern weiter gemäß ihrer Taten. "
+  "mn82:42.24": "und die Wesen wandern weiter gemäß ihrer Taten. ",
+  "mn82:42.25": "Reichtum folgt einem nicht in den Tod, "
 }
