Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp116-128_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp118:4": "Srećno je gomilanje dobročinstava. ",
   "dhp119:1": "Možda ga vidi i kao dobro, ",
   "dhp119:2": "sve dok zlodelo ne donese plod, ",
-  "dhp119:3": "ali kad donese plod, "
+  "dhp119:3": "ali kad donese plod, ",
+  "dhp119:4": "tada zlotvor prepozna zlodelo. "
 }
