Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -363,5 +363,6 @@
   "mn82:42.24": "und die Wesen wandern weiter gemäß ihrer Taten. ",
   "mn82:42.25": "Reichtum folgt einem nicht in den Tod, ",
   "mn82:42.26": "auch nicht Kinder, Frau, Vermögen und Königreich. ",
-  "mn82:42.27": "Langes Leben kann man nicht kaufen, "
+  "mn82:42.27": "Langes Leben kann man nicht kaufen, ",
+  "mn82:42.28": "und Reichtum kann das Alter nicht bannen; "
 }
